# 283284fe-46aa-4b10-a488-8260fcb9483f

./: .gitignore  README.md  compose.yaml  docker-compose.yaml
.github/workflows/: release.yml  shortener.yml
aerospike/: aerospike.conf
app/: .gitignore  Cargo.toml  Containerfile  Rocket-container.toml  Rocket-example.toml
app/src/: db.rs  main.rs  shortener.rs  structures.rs
test/: capacity.js
