[package]
name = "shortener"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aerospike = "1.3.0"
regex = "1.9.1"
rocket = { version = "0.5.0-rc.3", features = ["json"] }
serde = { version = "1.0.175", features = ["derive"] }
